fixed horizontal scroll for homework-08

--- a/html-css/homework-08/css/media.css
+++ b/html-css/homework-08/css/media.css
@@ -1,4 +1,4 @@
-@media (max-width: 747px) {
+@media (max-width: 767px) {
   .header-links {
     margin-bottom: 130px;
   }
@@ -26,7 +26,7 @@
   }
 }
 
-@media (min-width: 748px) {
+@media (min-width: 768px) {
   .container {
     width: 748px;
   }
@@ -68,7 +68,7 @@
     flex: 0 0 221px;
   }
 }
-@media (min-width: 748px) and (max-width: 941px) {
+@media (min-width: 768px) and (max-width: 961px) {
   .menu-partner-item:not(:nth-last-child(-n + 2)) {
     margin-bottom: 61px;
   }
@@ -76,7 +76,7 @@
     padding: 50px 36px;
   }
 }
-@media (min-width: 942px) {
+@media (min-width: 962px) {
   .container {
     min-width: 942px;
     max-width: 1440px;
